build: cache $GOPATH's pkg/mod/* in TravisCI
From https://evilmartians.com/chronicles/speeding-up-go-modules-for-docker-and-ci

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,12 +12,12 @@ matrix:
       go: 1.12.x
       cache:
         directories:
-          - "/home/travis/.cache/go-build" # GOCACHE
+          - $GOPATH/pkg/mod
     - os: osx
       go: 1.12.x
       cache:
         directories:
-          - "/Users/travis/Library/Caches/go-build" # GOCACHE
+          - $GOPATH/pkg/mod
 before_install:
   # Setup directory for binaries
   - mkdir ./bin
